--- a/.travis.yml
+++ b/.travis.yml
@@ -4,29 +4,52 @@ env:
   global:
     - LANG="zh_CN.UTF-8"
     - CMAKE_PREFIX=$HOME/prebuilt/cmake ;
-    - CMAKE_VERSION=3.4.3 ;
-    - LIBUV_PREFIX=$HOME/prebuilt/libuv/1.8.0 ;
-    - LIBUV_VERSION=1.8.0;
-    - MSGPACK_PREFIX=$HOME/prebuilt/msgpack/1.4.0 ;
-    - MSGPACK_VERSION=1.4.0 ;
-    
-  matrix:
-    - TRAVIS_OS_NAME=osx CC=clang CXX=clang++
-    - TRAVIS_OS_NAME=osx CC=gcc CXX=g++
-    - TRAVIS_OS_NAME=linux CC=gcc CXX=g++
-    - TRAVIS_OS_NAME=linux CC=gcc-4.9 CXX=g++-4.9
-    - TRAVIS_OS_NAME=linux CC=clang-3.7 CXX=clang++-3.7
+    - CMAKE_VERSION=3.5.1 ;
+    - LIBUV_PREFIX=$HOME/prebuilt/libuv/1.9.0 ;
+    - LIBUV_VERSION=1.9.0;
+    - MSGPACK_PREFIX=$HOME/prebuilt/msgpack/1.4.1 ;
+    - MSGPACK_VERSION=1.4.1 ;
 
-before_install:
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y "deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.7 main"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add - ; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update; fi
-  
-install:
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$CC" == "gcc-4.9" ] ; then sudo apt-get install -qq gcc-4.9-multilib g++-4.9-multilib; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$CC" == "clang-3.7" ] ; then sudo apt-get install --allow-unauthenticated -qq clang-3.7; fi
+  matrix:
+    - TRAVIS_OS_NAME=osx USE_CC=gcc USE_CXX=g++
+    - TRAVIS_OS_NAME=linux USE_CC=gcc USE_CXX=g++
+    - TRAVIS_OS_NAME=linux USE_CC=gcc-4.9 USE_CXX=g++-4.9
+    - TRAVIS_OS_NAME=linux USE_CC=gcc-5 USE_CXX=g++-5
+    - TRAVIS_OS_NAME=linux USE_CC=clang-3.8 USE_CXX=clang++-3.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.8
+    packages:
+      - gcc-4.9
+      - gcc-4.9-multilib
+      - g++-4.9
+      - g++-4.9-multilib
+      - gcc-5
+      - gcc-5-multilib
+      - g++-5
+      - g++-5-multilib
+      - clang
+      # - libc++1
+      # - libc++-dev
+      # - libc++abi1
+      # - libc++abi-dev
+      - clang-3.8
+      - libclang-common-3.8-dev
+      - libclang-3.8-dev
+
+# before_install:
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y "deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.7 main"; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add - ; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update; fi
+#
+# install:
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$USE_CC" == "gcc-4.9" ] ; then sudo apt-get install -qq gcc-4.9-multilib g++-4.9-multilib; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$USE_CC" == "clang-3.7" ] ; then sudo apt-get install --allow-unauthenticated -qq clang-3.7; fi
 
 before_script:
   - REPO_DIR=$PWD;
@@ -64,18 +87,18 @@ before_script:
 script:
   - REPO_DIR=$PWD;
   - mkdir -p $REPO_DIR/build && cd $REPO_DIR/build ;
-  - $CMAKE_PREFIX/bin/cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DLIBUV_ROOT=$LIBUV_PREFIX -DMSGPACK_ROOT=$MSGPACK_PREFIX ;
+  - $CMAKE_PREFIX/bin/cmake .. -DCMAKE_C_COMPILER=$USE_CC -DCMAKE_CXX_COMPILER=$USE_CXX -DLIBUV_ROOT=$LIBUV_PREFIX -DMSGPACK_ROOT=$MSGPACK_PREFIX ;
   - make -j4
 
 after_success:
   - test/unit_test
 
-cache: 
+cache:
   apt: true
   ccache: true
   directories:
-  - $HOME/prebuilt
-    
+  - /home/travis/prebuilt
+
 branches:
   only:
     - master
