--- a/.travis.yml
+++ b/.travis.yml
@@ -87,11 +87,11 @@ before_script:
 script:
   - REPO_DIR=$PWD;
   - mkdir -p $REPO_DIR/build && cd $REPO_DIR/build ;
-  - $CMAKE_PREFIX/bin/cmake .. -DCMAKE_C_COMPILER=$USE_CC -DCMAKE_CXX_COMPILER=$USE_CXX -DLIBUV_ROOT=$LIBUV_PREFIX -DMSGPACK_ROOT=$MSGPACK_PREFIX ;
+  - $CMAKE_PREFIX/bin/cmake .. -DCMAKE_C_COMPILER=$USE_CC -DCMAKE_CXX_COMPILER=$USE_CXX -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON -DLIBUV_ROOT=$LIBUV_PREFIX -DMSGPACK_ROOT=$MSGPACK_PREFIX ;
   - make -j4
 
 after_success:
-  - test/unit_test
+  - test/atbus_unit_test
 
 cache:
   apt: true
