--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ environment:
         PREBUILT_ROOT: C:/Users/appveyor/prebuilt
         SETUP_ROOT: C:/Users/appveyor/setup
         PKG_SRC_ROOT: C:/Users/appveyor/pkg_src
-        LIBUV_VERSION: 1.8.0
+        LIBUV_VERSION: 1.8.0 # 1.9.0版本编译不过
         MSYS2_PREFIX: C:/tools/msys64
         MSYS2_LOG_FILE: C:/Users/appveyor/pkg_src/output.log
     matrix:
@@ -36,7 +36,7 @@ environment:
           CMAKE_GEN: MinGW64
 
 configuration: RelWithDebInfo
-    
+
 #
 # Cache Cygwin files to speed up build
 #
@@ -54,143 +54,143 @@ clone_depth: 1
 #
 init:
     - ps: >-
-        if ( -not ( Test-Path "$Env:LIBUV_ROOT" ) ) { 
-            
+        if ( -not ( Test-Path "$Env:LIBUV_ROOT" ) ) {
+
             mkdir "$Env:LIBUV_ROOT"
-            
+
         }
-        
-        if ( -not ( Test-Path "$Env:SETUP_ROOT" ) ) { 
-            
+
+        if ( -not ( Test-Path "$Env:SETUP_ROOT" ) ) {
+
             mkdir "$Env:SETUP_ROOT"
-            
+
         }
-        
-        if ( -not ( Test-Path "$Env:PKG_SRC_ROOT" ) ) { 
-            
+
+        if ( -not ( Test-Path "$Env:PKG_SRC_ROOT" ) ) {
+
             mkdir "$Env:PKG_SRC_ROOT"
-            
+
         }
-        
-        if ( -not ( Test-Path "$Env:MSYS2_PREFIX" ) ) { 
-            
+
+        if ( -not ( Test-Path "$Env:MSYS2_PREFIX" ) ) {
+
             mkdir "$Env:MSYS2_PREFIX"
-            
+
         }
-        
+
     - ps: >-
         & git config --global core.autocrlf input
-        
+
         if ( "$Env:OS" -ieq "MinGW" ) {
-            
+
             if ( Test-Path "C:/msys64" ) {
-                
+
                 $Env:MSYS2_PREFIX="C:/msys64"
-                
+
                 $Env:PATH="$Env:MSYS2_PREFIX;$Env:PATH"
-                
+
             } else {
-                
+
                 & cinst -y msys2 | Out-Host
-                
+
             }
-            
+
             echo "" > "$Env:MSYS2_LOG_FILE"
-            
+
             Get-ChildItem "$Env:MSYS2_PREFIX"
-            
+
         }
-        
-    - ps: >- 
+
+    - ps: >-
         if ( "$Env:OS" -ieq "MinGW" ) {
-            
+
             echo "$Env:MSYS2_PREFIX/msys2_shell -lc 'pacman -Su --noconfirm --force > '$Env:MSYS2_LOG_FILE' 2>&1'"
-            
+
             & "$Env:MSYS2_PREFIX/msys2_shell" -lc "pacman -Su --noconfirm --force > '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
-            
+
             Get-Content "$Env:MSYS2_LOG_FILE"
         }
 
 #
 # Install needed build dependencies
-# 
+#
 install:
     - ps: >-
         if ( "$Env:OS" -ieq "MinGW" ) {
-            
+
             if ( Test-Path "$Env:LIBUV_ROOT/lib/libuv.a" ) {
-                
-                echo "using prebuilt cache $Env:LIBUV_ROOT" 
-                
+
+                echo "using prebuilt cache $Env:LIBUV_ROOT"
+
             } else {
-                
+
                 & "$Env:MSYS2_PREFIX/msys2_shell" -lc 'for pkg_name in cmake m4 curl wget tar autoconf automake mingw-w64-x86_64-toolchain mingw-w64-x86_64-toolchain mingw-w64-i686-toolchain mingw-w64-x86_64-libtool mingw-w64-i686-libtool python; do pacman -S --noconfirm --force $pkg_name >> '$Env:MSYS2_LOG_FILE' 2>&1; done' | Out-Host
-                
+
                 Get-Content "$Env:MSYS2_LOG_FILE"
-                
+
                 $LIBUV_PKG_PATH="$Env:SETUP_ROOT/libuv-v$Env:LIBUV_VERSION.tar.gz"
-                
+
                 $LIBUV_TAR_PATH="$Env:SETUP_ROOT/libuv-v$Env:LIBUV_VERSION.tar"
-                
+
                 if ( Test-Path "$LIBUV_PKG_PATH" ) {
-                    
-                    echo "using cache $LIBUV_PKG_PATH"   
-                    
+
+                    echo "using cache $LIBUV_PKG_PATH"
+
                 } else {
-                    
+
                     Invoke-WebRequest "$Env:LIBUV_PKG" -OutFile "$LIBUV_PKG_PATH"
-                    
+
                 }
-                
-                echo "7z x -y -o'$Env:PKG_SRC_ROOT' '$LIBUV_PKG_PATH'" 
-                
+
+                echo "7z x -y -o'$Env:PKG_SRC_ROOT' '$LIBUV_PKG_PATH'"
+
                 & 7z x -y -o"$Env:SETUP_ROOT" "$LIBUV_PKG_PATH"
-                
-                echo "7z x -y -o'$Env:PKG_SRC_ROOT' '$LIBUV_TAR_PATH'" 
-                
+
+                echo "7z x -y -o'$Env:PKG_SRC_ROOT' '$LIBUV_TAR_PATH'"
+
                 & 7z x -y -o"$Env:PKG_SRC_ROOT" "$LIBUV_TAR_PATH"
-                
+
                 if ( "$Env:CMAKE_GEN" -ieq "MinGW32" ) {
-                    
-                    echo "$Env:MSYS2_PREFIX/mingw32_shell -lc cd '$Env:PKG_SRC_ROOT/libuv-v$Env:LIBUV_VERSION' && ./autogen.sh ; ./configure --prefix=$Env:LIBUV_ROOT --with-pic=yes --enable-shared=no --enable-static=yes ; make install" 
-                    
+
+                    echo "$Env:MSYS2_PREFIX/mingw32_shell -lc cd '$Env:PKG_SRC_ROOT/libuv-v$Env:LIBUV_VERSION' && ./autogen.sh ; ./configure --prefix=$Env:LIBUV_ROOT --with-pic=yes --enable-shared=no --enable-static=yes ; make install"
+
                     & "$Env:MSYS2_PREFIX/mingw32_shell" -lc "cd '$Env:PKG_SRC_ROOT/libuv-v$Env:LIBUV_VERSION' && ./autogen.sh > '$Env:MSYS2_LOG_FILE' 2>&1; ./configure --prefix=$Env:LIBUV_ROOT --with-pic=yes --enable-shared=no --enable-static=yes >> '$Env:MSYS2_LOG_FILE' 2>&1; make install >> '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
-                    
+
                     Get-Content "$Env:MSYS2_LOG_FILE"
-                    
+
                 } else {
-                    
-                    echo "$Env:MSYS2_PREFIX/mingw64_shell -lc cd '$Env:PKG_SRC_ROOT/libuv-v$Env:LIBUV_VERSION' && ./autogen.sh ; ./configure --prefix=$Env:LIBUV_ROOT --with-pic=yes --enable-shared=no --enable-static=yes ; make install" 
-                    
+
+                    echo "$Env:MSYS2_PREFIX/mingw64_shell -lc cd '$Env:PKG_SRC_ROOT/libuv-v$Env:LIBUV_VERSION' && ./autogen.sh ; ./configure --prefix=$Env:LIBUV_ROOT --with-pic=yes --enable-shared=no --enable-static=yes ; make install"
+
                     & "$Env:MSYS2_PREFIX/mingw64_shell" -lc "cd '$Env:PKG_SRC_ROOT/libuv-v$Env:LIBUV_VERSION' && ./autogen.sh  > '$Env:MSYS2_LOG_FILE' 2>&1; ./configure --prefix=$Env:LIBUV_ROOT --with-pic=yes --enable-shared=no --enable-static=yes >> '$Env:MSYS2_LOG_FILE' 2>&1; make install >> '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
-                    
+
                     Get-Content "$Env:MSYS2_LOG_FILE"
                 }
-            
+
             }
-            
+
         } else {
 
             if ( Test-Path "$Env:LIBUV_ROOT/libuv.dll" ) {
-                
-                echo "using prebuilt cache $Env:LIBUV_ROOT" 
-                
+
+                echo "using prebuilt cache $Env:LIBUV_ROOT"
+
             } else {
-                
+
                 $LIBUV_PKG_PATH="$Env:SETUP_ROOT/libuv-$Env:PLATFORM-$Env:LIBUV_VERSION.exe"
-                
+
                 if ( Test-Path "$LIBUV_PKG_PATH" ) {
-                    
-                    echo "using cache $LIBUV_PKG_PATH"   
-                    
+
+                    echo "using cache $LIBUV_PKG_PATH"
+
                 } else {
-                    
+
                     Invoke-WebRequest "$Env:LIBUV_PKG" -OutFile "$LIBUV_PKG_PATH"
-                    
+
                 }
-                
-                echo "7z x -y -o'$Env:LIBUV_ROOT' '$LIBUV_PKG_PATH'" 
-                
+
+                echo "7z x -y -o'$Env:LIBUV_ROOT' '$LIBUV_PKG_PATH'"
+
                 & 7z x -y -o"$Env:LIBUV_ROOT" "$LIBUV_PKG_PATH"
             }
         }
@@ -200,92 +200,92 @@ install:
 # NOTES:
 #
 # The stdin/stdout file descriptor appears not to be valid for the Appveyor
-# build which causes failures as certain functions attempt to redirect 
+# build which causes failures as certain functions attempt to redirect
 # default file handles. Ensure a dummy file descriptor is opened with 'exec'.
 #
 build_script:
-    - ps: >- 
+    - ps: >-
 
         cd "$Env:APPVEYOR_BUILD_FOLDER"
-        
+
         New-Item -Path build -ItemType directory
-        
+
         cd build
-        
+
         Remove-Item -r *
-        
+
         if ( "$Env:OS" -ieq "MinGW" ) {
-            
+
             if ( "$Env:CMAKE_GEN" -ieq "MinGW32" ) {
-                
-                echo "$Env:MSYS2_PREFIX/mingw32_shell -lc cd '$Env:APPVEYOR_BUILD_FOLDER/build'; mkdir build cmake .. -G 'MSYS Makefiles' -DLIBUV_ROOT='$Env:LIBUV_ROOT'; make -j4" 
-                
-                & "$Env:MSYS2_PREFIX/mingw32_shell" -lc "cd '$Env:APPVEYOR_BUILD_FOLDER/build'; cmake .. -G 'MSYS Makefiles' -DLIBUV_ROOT='$Env:LIBUV_ROOT' > '$Env:MSYS2_LOG_FILE' 2>&1; make -j4 >> '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
-                
+
+                echo "$Env:MSYS2_PREFIX/mingw32_shell -lc cd '$Env:APPVEYOR_BUILD_FOLDER/build'; mkdir build cmake .. -G 'MSYS Makefiles' -DLIBUV_ROOT='$Env:LIBUV_ROOT' -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON ; make -j4"
+
+                & "$Env:MSYS2_PREFIX/mingw32_shell" -lc "cd '$Env:APPVEYOR_BUILD_FOLDER/build'; cmake .. -G 'MSYS Makefiles' -DLIBUV_ROOT='$Env:LIBUV_ROOT' -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON > '$Env:MSYS2_LOG_FILE' 2>&1; make -j4 >> '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
+
                 Get-Content "$Env:MSYS2_LOG_FILE"
-                
+
             } else {
-                
-                echo "$Env:MSYS2_PREFIX/mingw64_shell -lc cd '$Env:APPVEYOR_BUILD_FOLDER/build'; cmake .. -G 'MSYS Makefiles' -DLIBUV_ROOT='$Env:LIBUV_ROOT'; make -j4" 
-                
-                & "$Env:MSYS2_PREFIX/mingw64_shell" -lc "cd '$Env:APPVEYOR_BUILD_FOLDER/build'; cmake ..  -G 'MSYS Makefiles' -DLIBUV_ROOT='$Env:LIBUV_ROOT' > '$Env:MSYS2_LOG_FILE' 2>&1; make -j4 >> '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
-                
+
+                echo "$Env:MSYS2_PREFIX/mingw64_shell -lc cd '$Env:APPVEYOR_BUILD_FOLDER/build'; cmake .. -G 'MSYS Makefiles' -DLIBUV_ROOT='$Env:LIBUV_ROOT' -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON ; make -j4"
+
+                & "$Env:MSYS2_PREFIX/mingw64_shell" -lc "cd '$Env:APPVEYOR_BUILD_FOLDER/build'; cmake ..  -G 'MSYS Makefiles' -DLIBUV_ROOT='$Env:LIBUV_ROOT' -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON  > '$Env:MSYS2_LOG_FILE' 2>&1; make -j4 >> '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
+
                 Get-Content "$Env:MSYS2_LOG_FILE"
-                
+
             }
-            
+
         } else {
-            
-            echo "cmake ..  -G '$Env:CMAKE_GEN' -DLIBUV_ROOT='$Env:LIBUV_ROOT'" 
-            
-            & cmake ..  -G "$Env:CMAKE_GEN" -DLIBUV_ROOT="$Env:LIBUV_ROOT"
-            
+
+            echo "cmake ..  -G '$Env:CMAKE_GEN' -DLIBUV_ROOT='$Env:LIBUV_ROOT' -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON "
+
+            & cmake ..  -G "$Env:CMAKE_GEN" -DLIBUV_ROOT="$Env:LIBUV_ROOT" -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON
+
             echo "'C:\Program Files (x86)\MSBuild\14.0\bin\msbuild.exe' 'libatbus.sln' /verbosity:minimal /p:Configuration=$Env:CONFIGURATION /p:Platform=$Env:PLATFORM"
-            
+
             & "C:\Program Files (x86)\MSBuild\14.0\bin\msbuild.exe" "libatbus.sln" /verbosity:minimal /p:Configuration=$Env:CONFIGURATION /p:Platform=$Env:PLATFORM
         }
 #
 # Run unit test
 # Can not get failed log in mingw, so just check if build success in mingw(custom test myself)
-# 
+#
 test_script:
-    - ps: >- 
+    - ps: >-
 
         if ( "$Env:OS" -ieq "MinGW" ) {
 
-            if ( -not (  Test-Path "$Env:APPVEYOR_BUILD_FOLDER/build/test/unit_test.exe" ) ) {
-            
+            if ( -not (  Test-Path "$Env:APPVEYOR_BUILD_FOLDER/build/test/atbus_unit_test.exe" ) ) {
+
                 echo "Build failed.";
-                
+
                 exit -1;
-                
+
             }
-        
+
             <#
             if ( "$Env:CMAKE_GEN" -ieq "MinGW32" ) {
-                
-                echo "$Env:MSYS2_PREFIX/mingw32_shell -lc cd '$Env:APPVEYOR_BUILD_FOLDER/build'; ./test/unit_test.exe" 
-                
-                & "$Env:MSYS2_PREFIX/mingw32_shell" -lc "cd '$Env:APPVEYOR_BUILD_FOLDER/build'; ./test/unit_test.exe > '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
-                
+
+                echo "$Env:MSYS2_PREFIX/mingw32_shell -lc cd '$Env:APPVEYOR_BUILD_FOLDER/build'; ./test/atbus_unit_test.exe"
+
+                & "$Env:MSYS2_PREFIX/mingw32_shell" -lc "cd '$Env:APPVEYOR_BUILD_FOLDER/build'; ./test/atbus_unit_test.exe > '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
+
                 Get-Content "$Env:MSYS2_LOG_FILE"
-                
+
             } else {
-                
-                echo "$Env:MSYS2_PREFIX/mingw64_shell -lc cd '$Env:APPVEYOR_BUILD_FOLDER/build'; ./test/unit_test.exe" 
-                
-                & "$Env:MSYS2_PREFIX/mingw64_shell" -lc "cd '$Env:APPVEYOR_BUILD_FOLDER/build'; ./test/unit_test.exe > '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
-                
+
+                echo "$Env:MSYS2_PREFIX/mingw64_shell -lc cd '$Env:APPVEYOR_BUILD_FOLDER/build'; ./test/atbus_unit_test.exe"
+
+                & "$Env:MSYS2_PREFIX/mingw64_shell" -lc "cd '$Env:APPVEYOR_BUILD_FOLDER/build'; ./test/atbus_unit_test.exe > '$Env:MSYS2_LOG_FILE' 2>&1" | Out-Host
+
                 Get-Content "$Env:MSYS2_LOG_FILE"
-                
+
             }
             #>
-            
+
         } else {
-            
+
             Copy-Item -Force "$Env:LIBUV_ROOT/libuv.dll" ./
-            
-            & "test/$Env:CONFIGURATION/unit_test.exe"
+
+            & "test/$Env:CONFIGURATION/atbus_unit_test.exe"
         }
 
 #
