--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,9 @@ EchoWithColor(COLOR GREEN "-- Build Type: ${CMAKE_BUILD_TYPE}")
 include_macro_recurse("${CMAKE_CURRENT_LIST_DIR}")
 
 ## 导入工程项目
-add_subdirectory(${3RD_PARTY_ATFRAME_UTILS_PKG_DIR})
+if ( "${CMAKE_CURRENT_LIST_DIR}/3rd_party/atframe_utils/repo" EQUAL ${3RD_PARTY_ATFRAME_UTILS_PKG_DIR})
+    add_subdirectory(${3RD_PARTY_ATFRAME_UTILS_PKG_DIR})
+endif()
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/src")
 
 if (PROJECT_ENABLE_SAMPLE)
