--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ EchoWithColor(COLOR GREEN "-- Build Type: ${CMAKE_BUILD_TYPE}")
 ########################################################################
 # 导入项目配置
 ## 导入所有 macro 定义
-include_macro_recurse("${CMAKE_CURRENT_LIST_DIR}")
+include_macro_recurse(${CMAKE_CURRENT_LIST_DIR})
 
 ## 导入工程项目
 if ( "${CMAKE_CURRENT_LIST_DIR}/3rd_party/atframe_utils/repo" STREQUAL ${3RD_PARTY_ATFRAME_UTILS_PKG_DIR})
@@ -45,4 +45,8 @@ endif()
 if (PROJECT_ENABLE_UNITTEST)
     include ("${3RD_PARTY_ATFRAME_UTILS_PKG_DIR}/test/test.utils-macro.cmake")
     add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/test")
+endif()
+
+if (PROJECT_ENABLE_TOOLS)
+    add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/tools")
 endif()
