--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,18 @@ env:
   matrix:
     - TRAVIS_OS_NAME=osx USE_CC=gcc USE_CXX=g++
     - TRAVIS_OS_NAME=linux USE_CC=gcc USE_CXX=g++
+    - TRAVIS_OS_NAME=linux USE_CC=gcc-4.4 USE_CXX=g++-4.4
     - TRAVIS_OS_NAME=linux USE_CC=gcc-4.9 USE_CXX=g++-4.9
     - TRAVIS_OS_NAME=linux USE_CC=gcc-6 USE_CXX=g++-6
-    - TRAVIS_OS_NAME=linux USE_CC=clang-3.8 USE_CXX=clang++-3.8
+    # - TRAVIS_OS_NAME=linux USE_CC=clang-3.8 USE_CXX=clang++-3.8
 
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-      - llvm-toolchain-3.8
+      # - llvm-toolchain-precise-3.8
     packages:
+      - gcc-4.4
       - gcc-4.9
       - gcc-4.9-multilib
       - g++-4.9
@@ -30,13 +32,13 @@ addons:
       - g++-6
       - g++-6-multilib
       - clang
-      # - libc++1
-      # - libc++-dev
-      # - libc++abi1
-      # - libc++abi-dev
-      - clang-3.8
-      - libclang-common-3.8-dev
-      - libclang-3.8-dev
+      ## - libc++1
+      ## - libc++-dev
+      ## - libc++abi1
+      ## - libc++abi-dev
+      # - clang-3.8
+      # - libclang-common-3.8-dev
+      # - libclang-3.8-dev
 
 # before_install:
 #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
