--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ env:
   matrix:
     - TRAVIS_OS_NAME=osx USE_CC=gcc USE_CXX=g++
     - TRAVIS_OS_NAME=linux USE_CC=gcc USE_CXX=g++
-    - TRAVIS_OS_NAME=linux USE_CC=gcc-4.4 USE_CXX=g++-4.4
     - TRAVIS_OS_NAME=linux USE_CC=gcc-4.9 USE_CXX=g++-4.9
     - TRAVIS_OS_NAME=linux USE_CC=gcc-6 USE_CXX=g++-6
     # - TRAVIS_OS_NAME=linux USE_CC=clang-3.8 USE_CXX=clang++-3.8
@@ -24,11 +23,16 @@ addons:
       - ubuntu-toolchain-r-test
       # - llvm-toolchain-precise-3.8
     packages:
+      - g++-4.4
+      - g++-4.4-multilib
       - gcc-4.4
+      - gcc-4.4-multilib
       - gcc-4.9
       - gcc-4.9-multilib
       - g++-4.9
       - g++-4.9-multilib
+      - gcc-6
+      - gcc-6-multilib
       - g++-6
       - g++-6-multilib
       - clang
