--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ addons:
       - ubuntu-toolchain-r-test
       # - llvm-toolchain-precise-3.8
     packages:
+      - libboost-all-dev
       - g++-4.4
       - g++-4.4-multilib
       - gcc-4.4
