--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
   matrix:
     - TRAVIS_OS_NAME=osx USE_CC=gcc USE_CXX=g++
     - TRAVIS_OS_NAME=linux USE_CC=gcc USE_CXX=g++
-    # - TRAVIS_OS_NAME=linux USE_CC=gcc-4.4 USE_CXX=g++-4.4
+    - TRAVIS_OS_NAME=linux USE_CC=gcc-4.4 USE_CXX=g++-4.4
     - TRAVIS_OS_NAME=linux USE_CC=gcc-4.9 USE_CXX=g++-4.9
     - TRAVIS_OS_NAME=linux USE_CC=gcc-6 USE_CXX=g++-6
     # - TRAVIS_OS_NAME=linux USE_CC=clang-3.8 USE_CXX=clang++-3.8
