--- a/.travis.yml
+++ b/.travis.yml
@@ -4,27 +4,46 @@ env:
   global:
     - LANG="zh_CN.UTF-8"
     - CMAKE_PREFIX=$HOME/prebuilt/cmake ;
-    - CMAKE_VERSION=3.5.1 ;
-    - LIBUV_PREFIX=$HOME/prebuilt/libuv/1.9.1 ;
-    - LIBUV_VERSION=1.9.1;
-    - MSGPACK_PREFIX=$HOME/prebuilt/msgpack/1.4.1 ;
-    - MSGPACK_VERSION=1.4.1 ;
-
-  matrix:
-    - TRAVIS_OS_NAME=osx USE_CC=gcc USE_CXX=g++
-    - TRAVIS_OS_NAME=linux USE_CC=gcc USE_CXX=g++
-    - TRAVIS_OS_NAME=linux USE_CC=gcc-4.4 USE_CXX=g++-4.4
-    - TRAVIS_OS_NAME=linux USE_CC=gcc-4.9 USE_CXX=g++-4.9
-    - TRAVIS_OS_NAME=linux USE_CC=gcc-6 USE_CXX=g++-6
-    - TRAVIS_OS_NAME=linux USE_CC=clang-3.8 USE_CXX=clang++-3.8
+    - CMAKE_VERSION=3.5.2 ;
+matrix:
+  include:
+    - os: osx
+      env: USE_CC=clang USE_CXX=clang++
+    - os: osx
+      env: USE_CC=gcc USE_CXX=g++
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: USE_CC=gcc USE_CXX=g++
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: USE_CC=gcc-4.4 USE_CXX=g++-4.4
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: USE_CC=gcc-4.9 USE_CXX=g++-4.9
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: USE_CC=gcc-6 USE_CXX=g++-6
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: USE_CC=clang USE_CXX=clang++
+    # - os: linux
+    #   dist: trusty
+    #   sudo: required
+    #   env: USE_CC=clang-3.8 USE_CXX=clang++-3.8
 
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise-3.8
+      # - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
+      #   key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+
     packages:
-      - libboost-all-dev
       - g++-4.4
       - g++-4.4-multilib
       - gcc-4.4
@@ -42,20 +61,20 @@ addons:
       ## - libc++-dev
       ## - libc++abi1
       ## - libc++abi-dev
-      - clang-3.8
-      - libclang-common-3.8-dev
-      - libclang-3.8-dev
+      # - clang-3.8
+      # - libclang-common-3.8-dev
+      # - libclang-3.8-dev
 
-      # before_install:
-      #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
-      #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y "deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.7 main"; fi
-      #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add - ; fi
-      #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
-      #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update; fi
-      #
-      # install:
-      #   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$USE_CC" == "gcc-4.9" ] ; then sudo apt-get install -qq gcc-4.9-multilib g++-4.9-multilib; fi
-      #   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$USE_CC" == "clang-3.7" ] ; then sudo apt-get install --allow-unauthenticated -qq clang-3.7; fi
+# before_install:
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y "deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.7 main"; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add - ; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update; fi
+#
+# install:
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$USE_CC" == "gcc-4.9" ] ; then sudo apt-get install -qq gcc-4.9-multilib g++-4.9-multilib; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$USE_CC" == "clang-3.7" ] ; then sudo apt-get install --allow-unauthenticated -qq clang-3.7; fi
 
 before_script:
   - REPO_DIR=$PWD;
