fix configure of tools

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -21,6 +21,10 @@ file(GLOB TOOLS_SRC_LIST
 
 set(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/tools")
 
+if (MINGW)
+    list(APPEND EXTENTION_LINK_LIB stdc++)
+endif()
+
 foreach(TOOLS_SRC_FILE IN LISTS TOOLS_SRC_LIST)
     get_filename_component(TOOLS_SRC_BIN_NAME "${TOOLS_SRC_FILE}" NAME_WE)
 
@@ -29,7 +33,8 @@ foreach(TOOLS_SRC_FILE IN LISTS TOOLS_SRC_LIST)
 	    ${PROJECT_LIB_LINK}
 		${PROJECT_TOOLS_LIB_LINK}
         ${3RD_PARTY_LIBUV_LINK_NAME}
-        ${3RD_PARTY_C_CPP_UTILS_LINK_NAME}
+        ${3RD_PARTY_ATFRAME_UTILS_LINK_NAME}
+        ${EXTENTION_LINK_LIB}
 	)
 
 	install(TARGETS "${TOOLS_SRC_BIN_NAME}"
