--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ language: cpp
 env:
   global:
     - LANG="zh_CN.UTF-8"
-    - CMAKE_PREFIX=$HOME/prebuilt/cmake ;
-    - CMAKE_VERSION=3.5.2 ;
     - MSGPACK_PREFIX=$HOME/prebuilt/msgpack-2.0.0 ;
     - MSGPACK_VERSION=2.0.0 ;
 matrix:
@@ -42,6 +40,7 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+      - ppa:george-edison55/cmake-3.x
       # - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
       #   key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
 
@@ -67,14 +66,18 @@ addons:
       # - libclang-common-3.8-dev
       # - libclang-3.8-dev
 
-# before_install:
+before_install:
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get -qq update; fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
 #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
 #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y "deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.7 main"; fi
 #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add - ; fi
 #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
 #   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update; fi
-#
-# install:
+
+install:
+    - if [ "$TRAVIS_OS_NAME" == "linux" ] ; then sudo apt-get install -qq -y cmake; fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ] ; then brew upgrade cmake; fi
 #   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$USE_CC" == "gcc-4.9" ] ; then sudo apt-get install -qq gcc-4.9-multilib g++-4.9-multilib; fi
 #   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$USE_CC" == "clang-3.7" ] ; then sudo apt-get install --allow-unauthenticated -qq clang-3.7; fi
 
@@ -99,23 +102,13 @@ before_script:
         cd -;
         rm -rf libuv-v$LIBUV_VERSION libuv-v$LIBUV_VERSION ;
     fi
-  - if [ ! -e "$CMAKE_PREFIX/bin/cmake" ]; then
-        mkdir -p "$CMAKE_PREFIX";
-        wget -c "https://github.com/Kitware/CMake/archive/v$CMAKE_VERSION.tar.gz" -O CMake-$CMAKE_VERSION.tar.gz ;
-        tar -xvf CMake-$CMAKE_VERSION.tar.gz;
-        cd CMake-$CMAKE_VERSION ;
-        ./bootstrap --prefix=$CMAKE_PREFIX;
-        make -j4 install;
-        cd -;
-        rm -rf CMake-$CMAKE_VERSION CMake-$CMAKE_VERSION.tar.gz;
-    fi
   - cd "$REPO_DIR";
 
 script:
   - REPO_DIR=$PWD;
   - mkdir -p $REPO_DIR/build && cd $REPO_DIR/build ;
   - USE_MSGPACK_ROOT=$MSGPACK_PREFIX ;
-  - $CMAKE_PREFIX/bin/cmake .. -DCMAKE_C_COMPILER=$USE_CC -DCMAKE_CXX_COMPILER=$USE_CXX -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON -DPROJECT_ENABLE_TOOLS=ON -DLIBUV_ROOT=$LIBUV_PREFIX -DMSGPACK_ROOT=$USE_MSGPACK_ROOT ;
+  - cmake .. -DCMAKE_C_COMPILER=$USE_CC -DCMAKE_CXX_COMPILER=$USE_CXX -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON -DPROJECT_ENABLE_TOOLS=ON -DLIBUV_ROOT=$LIBUV_PREFIX -DMSGPACK_ROOT=$USE_MSGPACK_ROOT ;
   - make -j4
 
 after_success:
