--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,8 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-      - ppa:george-edison55/cmake-3.x
+      - sourceline: 'ppa:george-edison55/cmake-3.x'
+        key_url: null
       # - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
       #   key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
 
