1. 修改appveyor环境配置 2. libatbus增加内存屏障，增加更详细的dump日志

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,17 +16,17 @@ environment:
         MSYS2_PREFIX: C:/tools/msys64
         MSYS2_LOG_FILE: C:/Users/appveyor/pkg_src/output.log
     matrix:
-        - os: Visual Studio 2017
+        - image: Visual Studio 2017
           platform: x64
           LIBUV_PKG: http://dist.libuv.org/dist/v1.11.0/libuv-x64-v1.11.0.build6.exe
           LIBUV_ROOT: C:/Users/appveyor/prebuilt/x64/1.11.0
           CMAKE_GEN: Visual Studio 15 2017 Win64
-        - os: Visual Studio 2015
+        - image: Visual Studio 2015
           platform: x64
           LIBUV_PKG: http://dist.libuv.org/dist/v1.11.0/libuv-x64-v1.11.0.build6.exe
           LIBUV_ROOT: C:/Users/appveyor/prebuilt/x64/1.11.0
           CMAKE_GEN: Visual Studio 14 2015 Win64
-        - os: Visual Studio 2013
+        - image: Visual Studio 2013
           platform: x64
           LIBUV_PKG: http://dist.libuv.org/dist/v1.11.0/libuv-x64-v1.11.0.build6.exe
           LIBUV_ROOT: C:/Users/appveyor/prebuilt/x64/1.11.0
