--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,10 @@ matrix:
       dist: trusty
       sudo: required
       env: USE_CC=gcc-7 USE_CXX=g++-7 CMAKE_BIN=$CMAKE_PREFIX/bin/cmake
-    - os: linux
-      dist: trusty
-      sudo: required
-      env: USE_CC=clang USE_CXX=clang++ CMAKE_BIN=$CMAKE_PREFIX/bin/cmake
+    #- os: linux
+    #  dist: trusty
+    #  sudo: required
+    #  env: USE_CC=clang USE_CXX=clang++ CMAKE_BIN=$CMAKE_PREFIX/bin/cmake
     # - os: linux
     #   dist: trusty
     #   sudo: required
