--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -19,7 +19,7 @@ file(GLOB TOOLS_SRC_LIST
     ${PROJECT_TOOLS_SRC_DIR}/*.cxx
 )
 
-set(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/tools")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/tools")
 
 foreach(TOOLS_SRC_FILE IN LISTS TOOLS_SRC_LIST)
     get_filename_component(TOOLS_SRC_BIN_NAME "${TOOLS_SRC_FILE}" NAME_WE)
