--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,6 @@
 ﻿
 EchoWithColor(COLOR GREEN "-- Configure Unit Test ${CMAKE_CURRENT_LIST_DIR}")
 
-enable_testing()
-
 include("${PROJECT_TEST_BAS_DIR}/test.build_bin.cmake")
 
 include_directories(${PROJECT_ROOT_SRC_DIR})
@@ -21,7 +19,7 @@ file(GLOB_RECURSE PROJECT_TEST_SRC_LIST
 source_group_by_dir(PROJECT_TEST_SRC_LIST)
 
 # ============ test - coroutine test frame ============
-set(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/test")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/test")
 
 add_executable(atbus_unit_test ${PROJECT_TEST_SRC_LIST})
 target_link_libraries(atbus_unit_test
