优化CI脚本 接入覆盖率

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ matrix:
   include:
     - os: osx
       env: USE_CC=clang USE_CXX=clang++ CMAKE_BIN=cmake CTEST_BIN=ctest
-    - os: osx
-      env: USE_CC=gcc USE_CXX=g++ CMAKE_BIN=cmake CTEST_BIN=ctest
     - os: linux
       dist: trusty
       sudo: required
@@ -23,14 +21,41 @@ matrix:
       dist: trusty
       sudo: required
       env: USE_CC=gcc-4.4 USE_CXX=g++-4.4 CMAKE_BIN=$CMAKE_PREFIX/bin/cmake CTEST_BIN=$CMAKE_PREFIX/bin/ctest # MSGPACK_VERSION=1.4.2
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.4
+            - g++-4.4-multilib
+            - gcc-4.4
+            - gcc-4.4-multilib
     - os: linux
       dist: trusty
       sudo: required
       env: USE_CC=gcc-4.9 USE_CXX=g++-4.9 CMAKE_BIN=$CMAKE_PREFIX/bin/cmake CTEST_BIN=$CMAKE_PREFIX/bin/ctest
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-4.9
+            - gcc-4.9-multilib
+            - g++-4.9
+            - g++-4.9-multilib
     - os: linux
       dist: trusty
       sudo: required
       env: USE_CC=gcc-7 USE_CXX=g++-7 CMAKE_BIN=$CMAKE_PREFIX/bin/cmake CTEST_BIN=$CMAKE_PREFIX/bin/ctest
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-7
+            - gcc-7-multilib
+            - g++-7
+            - g++-7-multilib
     #- os: linux
     #  dist: trusty
     #  sudo: required
@@ -39,35 +64,23 @@ matrix:
     #   dist: trusty
     #   sudo: required
     #   env: USE_CC=clang-3.8 USE_CXX=clang++-3.8 CMAKE_BIN=$CMAKE_PREFIX/bin/cmake CTEST_BIN=$CMAKE_PREFIX/bin/ctest
-
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-      # - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
-      #   key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
-
-    packages:
-      - g++-4.4
-      - g++-4.4-multilib
-      - gcc-4.4
-      - gcc-4.4-multilib
-      - gcc-4.9
-      - gcc-4.9-multilib
-      - g++-4.9
-      - g++-4.9-multilib
-      - gcc-7
-      - gcc-7-multilib
-      - g++-7
-      - g++-7-multilib
-      - clang
-      ## - libc++1
-      ## - libc++-dev
-      ## - libc++abi1
-      ## - libc++abi-dev
-      # - clang-3.8
-      # - libclang-common-3.8-dev
-      # - libclang-3.8-dev
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: COVERALLS_SERVICE_NAME=travis-ci GCOV_FLAGS='--coverage -fprofile-arcs -ftest-coverage' CMAKE_BIN=$CMAKE_PREFIX/bin/cmake CTEST_BIN=$CMAKE_PREFIX/bin/ctest
+      # COVERALLS_REPO_TOKEN is set in travis-ci
+      script:
+        - REPO_DIR=$PWD;
+        - USE_MSGPACK_ROOT=$MSGPACK_PREFIX ;
+        - if [ -e "$REPO_DIR/build" ]; then rm -rf "$REPO_DIR/build"; fi
+        - mkdir -p $REPO_DIR/build && cd $REPO_DIR/build ;
+        - echo "$CMAKE_BIN .. -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON" ;
+        - $CMAKE_BIN .. "-DCMAKE_C_FLAGS=$GCOV_FLAGS" "-DCMAKE_CXX_FLAGS=$GCOV_FLAGS" "-DCMAKE_EXE_LINKER_FLAGS=$GCOV_FLAGS" -DCMAKE_BUILD_TYPE=Debug -DPROJECT_ENABLE_UNITTEST=ON -DPROJECT_ENABLE_SAMPLE=ON -DPROJECT_ENABLE_TOOLS=ON -DLIBUV_ROOT=$LIBUV_PREFIX -DMSGPACK_ROOT=$USE_MSGPACK_ROOT ;
+        - $CMAKE_BIN --build .
+      after_success:
+        - $CTEST_BIN . -V
+        - pip install --user cpp-coveralls
+        - coveralls -r .. --gcov-options '\-lp' -e 3rd_party -e sample -e test -e tools -e build/CMakeFiles
 
 before_install:
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get -qq update; fi
@@ -138,6 +151,7 @@ after_success:
 cache:
   apt: true
   ccache: true
+  pip: true
   directories:
   - /home/travis/prebuilt
 
