CI里跑共享内存，以便提高覆盖率

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,6 +79,10 @@ matrix:
         - $CMAKE_BIN --build .
       after_success:
         - $CTEST_BIN . -V
+        # run tools for coverage
+        - timeout 10s ./tools/benchmark_shm_channel_recv 12345679 1024 4194304 > recv.log 2>&1 &
+        - timeout 10s ./tools/benchmark_shm_channel_send 12345679 1024 4194304 > send.log 2>&1
+        - ./tools/show_shm_channel 12345679 1 16
         - pip install --user cpp-coveralls
         - coveralls -r .. --gcov-options '\-lp' -e 3rd_party -e sample -e test -e tools -e build/CMakeFiles
 
