--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,20 +2,20 @@
 
 EchoWithColor(COLOR GREEN "-- Configure ${CMAKE_CURRENT_LIST_DIR}")
 
-include_directories(${PROJECT_ROOT_SRC_DIR})
+include_directories(${PROJECT_LIBATBUS_ROOT_SRC_DIR})
 
-file(RELATIVE_PATH PROJECT_ROOT_RELINC_DIR ${CMAKE_CURRENT_LIST_DIR} ${PROJECT_ROOT_INC_DIR})
+file(RELATIVE_PATH PROJECT_ROOT_RELINC_DIR ${CMAKE_CURRENT_LIST_DIR} ${PROJECT_LIBATBUS_ROOT_INC_DIR})
 
 file(GLOB_RECURSE PROJECT_LIB_SRC_LIST
     ${PROJECT_ROOT_RELINC_DIR}/*.h
     ${PROJECT_ROOT_RELINC_DIR}/*.hpp
     ${PROJECT_ROOT_RELINC_DIR}/*.hxx
-    ${PROJECT_ROOT_SRC_DIR}/*.h
-    ${PROJECT_ROOT_SRC_DIR}/*.hpp
-    ${PROJECT_ROOT_SRC_DIR}/*.c
-    ${PROJECT_ROOT_SRC_DIR}/*.cpp
-    ${PROJECT_ROOT_SRC_DIR}/*.cc
-    ${PROJECT_ROOT_SRC_DIR}/*.cxx
+    ${PROJECT_LIBATBUS_ROOT_SRC_DIR}/*.h
+    ${PROJECT_LIBATBUS_ROOT_SRC_DIR}/*.hpp
+    ${PROJECT_LIBATBUS_ROOT_SRC_DIR}/*.c
+    ${PROJECT_LIBATBUS_ROOT_SRC_DIR}/*.cpp
+    ${PROJECT_LIBATBUS_ROOT_SRC_DIR}/*.cc
+    ${PROJECT_LIBATBUS_ROOT_SRC_DIR}/*.cxx
 )
 source_group_by_dir(PROJECT_LIB_SRC_LIST)
 
@@ -34,7 +34,7 @@ install(TARGETS ${PROJECT_LIB_LINK}
     ARCHIVE DESTINATION lib${PLATFORM_SUFFIX}
 )
 
-install(DIRECTORY ${PROJECT_ROOT_INC_DIR}
+install(DIRECTORY ${PROJECT_LIBATBUS_ROOT_INC_DIR}
     DESTINATION .
     FILES_MATCHING REGEX ".+\\.h(pp)?$"
     PATTERN ".svn" EXCLUDE
