fix compile for include detect

--- a/include/detail/libatbus_config.h.in
+++ b/include/detail/libatbus_config.h.in
@@ -39,6 +39,6 @@
 #define ATBUS_MACRO_ENABLE_STATIC_ASSERT 1
 #endif
 
-#cmakedefine ATBUS_MACRO_WITH_UNIX_SOCK "@ATBUS_MACRO_WITH_UNIX_SOCK@"
+#cmakedefine ATBUS_MACRO_WITH_UNIX_SOCK @ATBUS_MACRO_WITH_UNIX_SOCK@
 
 #endif
