--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,9 +29,9 @@ endif()
 add_library(${PROJECT_LIB_LINK} ${PROJECT_LIB_SRC_LIST})
 
 install(TARGETS ${PROJECT_LIB_LINK}
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION lib${PLATFORM_SUFFIX}
-    ARCHIVE DESTINATION lib${PLATFORM_SUFFIX}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 
 install(DIRECTORY ${PROJECT_LIBATBUS_ROOT_INC_DIR}
