--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -35,8 +35,8 @@ foreach(TOOLS_SRC_FILE IN LISTS TOOLS_SRC_LIST)
 
 	install(TARGETS "${TOOLS_SRC_BIN_NAME}"
         RUNTIME DESTINATION tools
-        LIBRARY DESTINATION lib${PLATFORM_SUFFIX}
-        ARCHIVE DESTINATION lib${PLATFORM_SUFFIX}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 
 endforeach()
