优化静态链接的编译选项。调整函数名，时适配某些环境会定义check宏

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 ﻿cmake_minimum_required(VERSION 3.7.0)
+cmake_policy(SET CMP0074 NEW)
 
 enable_testing()
 
 project(libatbus C CXX)
 
 set(LIBATBUS_VERSION_MAJOR "1")
-set(LIBATBUS_VERSION_MINOR "0")
+set(LIBATBUS_VERSION_MINOR "1")
 set(LIBATBUS_VERSION_PATCH "0")
 set(LIBATBUS_VERSION "${LIBATBUS_VERSION_MAJOR}.${LIBATBUS_VERSION_MINOR}.${LIBATBUS_VERSION_PATCH}")
 
