--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,10 +6,11 @@ EchoWithColor(COLOR GREEN "-- Configure Tools ${CMAKE_CURRENT_LIST_DIR}")
 include_directories(${PROJECT_TOOLS_INC_DIR})
 
 # ================ multi thread ================
-if ( NOT MSVC )
+find_package(Threads)
+if (CMAKE_USE_PTHREADS_INIT)
     add_definitions(-D_POSIX_MT_)
-    set (PROJECT_TOOLS_LIB_LINK ${PROJECT_TOOLS_LIB_LINK} pthread)
-endif()
+    list(APPEND COMPILER_OPTION_EXTERN_CXX_LIBS pthread)
+endif ()
 
 
 file(GLOB TOOLS_SRC_LIST
