优化release编译的新unused warning和临时屏蔽VC的整数类型转换warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,10 @@ endif()
 
 if (COMPILER_STRICT_EXTRA_CFLAGS)
     add_definitions(${COMPILER_STRICT_EXTRA_CFLAGS})
+    # TODO 先临时关闭下VC下的int类型转换warning，后面再修订
+    if (MSVC)
+        add_definitions(/wd4244)
+    endif ()
 endif ()
 
 if (COMPILER_STRICT_CFLAGS)
