set _CRT_SECURE_NO_WARNINGS for test@MSVC

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,6 +26,8 @@ if (CMAKE_USE_PTHREADS_INIT)
     list(APPEND COMPILER_OPTION_EXTERN_CXX_LIBS pthread)
 endif ()
 
+add_compiler_define(_CRT_SECURE_NO_WARNINGS=1)
+
 add_executable(atbus_unit_test ${PROJECT_TEST_SRC_LIST})
 target_link_libraries(atbus_unit_test
     ${PROJECT_LIB_LINK}
